Fixed frontpage facts block, was not aligned correctly anymore

--- a/pum/css/pum.css
+++ b/pum/css/pum.css
@@ -13829,10 +13829,6 @@ em, i {
   .l-main .inner {
     width: 792px; }
 
-  .title {
-    clear: right;
-    width: auto; }
-
   .share-this-article {
     width: auto;
     float: right;
