--- a/pum/scss/layout/_main.scss
+++ b/pum/scss/layout/_main.scss
@@ -43,10 +43,6 @@
         }
     } // ./ l-main
 
-    .title {
-      clear: right;
-      width: auto;
-    }
     .share-this-article {
       width: auto;
       float:right;
